# Arima-Forecasting-Model

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
examples/: demo.py
src/arima_forecaster/: __init__.py  analysis.py  core.py  preprocessing.py  tuning.py
tests/: test_arima.py
