[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arima_forecaster"
version = "0.1.0"
authors = [
  { name="Gemini CLI", email="gemini@example.com" },
]
description = "A reusable ARIMA forecasting module."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
    "streamlit>=1.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
